workshop4/nw-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwapp-deploy
  #namespace: nw
  labels:
    app: northwind
    label: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nwapp-pod
  template:
    metadata:
      name: nwapp-pod
      labels:
        app: nwapp-pod
    spec:
      containers:
        - name: nwapp-container
          image: dockerkoh/nw_server:v1
          resources:
            requests:
              cpu: 200m
              memory: 32Mi
            limits:
              memory: 64M
          imagePullPolicy: IfNotPresent
          ports:
            - name: nwapp-port
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nwapp-svc
  #namespace: nw
  labels:
    app: northwind
spec:
  type: ClusterIP
  selector:
    # this selector refers to the pod
    app: nwapp-pod
  ports:
    - name: nwapp-svc-port
      port: 3000
      targetPort: nwapp-port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nwapp-ing
  labels:
    app: northwind
spec:
  rules:
    - host: nwapp.167.172.5.33.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: nwapp-svc
              servicePort: nwapp-svc-port
